[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dev-dependencies.serde]
version = '1.0.119'

[dev-dependencies.sp-core]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.frame-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'



[dependencies]
log = { version = "0.4.14", default-features = false }

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
#num-bigint = "0.4"
##num-traits = "0.2"
rand = { version = "0.8", default-features = false }

## Arkworks
ark-std = { version = "0.3", default-features = false }
ark-bls12-377 = { version = "0.3", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.3", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.3", default-features = false }
ark-cp6-782 = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-serialize = { version = "0.3", default-features = false }
ark-relations = { version = "0.3", default-features = false }
ark-groth16 = { version = "0.3", default-features = false }

# zkMega
arkworks = { package = "zkmega-arkworks", path = "../../crates/curve" }